--- a/index.html
+++ b/index.html
@@ -1,193 +1,69 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Go_ESIM 🌍 Интернет без роуминга</title>
-  <meta name="description" content="Купить eSIM онлайн. Интернет без роуминга в 200+ странах. Установка за 1 минуту. Совместимо с iPhone, Samsung, Pixel." />
-  <link rel="icon" href="favicon.ico" />
-  <meta property="og:title" content="Go_ESIM — eSIM за 1 минуту">
-  <meta property="og:description" content="Купи eSIM, подключай интернет без роуминга в 200+ странах.">
-  <meta property="og:image" content="og_image.png">
-
-  <style>
-    :root{
-      --bg:#0f1216; --ink:#e7eef7; --muted:#a5b5c8; --card:#151a21; --line:#202833;
-      --brand:#00c853; --brand-hover:#00a344; --link:#61dafb;
-      --maxw:980px; --radius:14px; --shadow:0 8px 26px rgba(0,0,0,.22);
-    }
-    *{box-sizing:border-box}
-    html,body{margin:0}
-    body{font:16px/1.6 system-ui,-apple-system,Segoe UI,Roboto;color:var(--ink);background:var(--bg)}
-    a{color:var(--link);text-decoration:none}
-    a:hover{text-decoration:underline}
-    .container{max-width:var(--maxw);margin:0 auto;padding:0 16px}
-
-    /* topbar: только TG + язык */
-    .topbar{position:sticky;top:0;z-index:10;background:rgba(15,18,22,.75);backdrop-filter:blur(6px);border-bottom:1px solid var(--line)}
-    .top-inner{display:flex;justify-content:flex-end;align-items:center;gap:12px;padding:10px 0}
-    .chip{padding:6px 10px;border:1px solid var(--line);border-radius:10px;cursor:pointer}
-    .chip.active{background:#1a222d}
-
-    /* HERO как раньше */
-    .hero{
-      position:relative;overflow:hidden;border-bottom:1px solid var(--line);
-      background:
-        radial-gradient(1200px 600px at 80% -20%, rgba(0,200,83,.12), transparent 60%),
-        radial-gradient(1000px 500px at -10% -20%, rgba(97,218,251,.10), transparent 60%),
-        linear-gradient(180deg,#121721 0%,#0f1216 60%);
-    }
-    .hero-inner{padding:64px 0 40px;text-align:center}
-    .logo{width:88px;height:88px;border-radius:18px;background:#0c1015 url('favicon.ico') center/54px no-repeat;
-          border:1px solid var(--line);box-shadow:var(--shadow);margin:0 auto 16px}
-    h1{margin:6px 0 10px;font-size:42px}
-    .tagline{margin:0 0 22px;color:var(--muted);font-size:18px}
-    .btn{display:inline-block;padding:14px 26px;font-weight:700;border-radius:12px;border:0;
-         color:#04140a;background:var(--brand);box-shadow:var(--shadow);transition:.15s}
-    .btn:hover{background:var(--brand-hover);text-decoration:none}
-    .btn-outline{background:transparent;color:var(--ink);border:1px solid var(--line);box-shadow:none;margin-left:10px}
-    .btn-outline:hover{border-color:#2a3442}
-
-    /* секции */
-    main{padding:34px 0 64px}
-    .card{background:var(--card);border:1px solid var(--line);border-radius:var(--radius);
-          padding:22px;margin:18px 0;box-shadow:var(--shadow)}
-    h2{margin:0 0 12px;font-size:22px}
-    ul{margin:0;padding-left:20px}
-    details{background:#121821;border:1px solid var(--line);border-radius:10px;padding:10px;margin:8px 0}
-    details[open]{background:#131b24}
-    summary{cursor:pointer;font-weight:600}
-    footer{border-top:1px solid var(--line);color:var(--muted);padding:22px 0;text-align:center}
-  </style>
+  <meta name="description" content="Купи eSIM онлайн — установка за 1 минуту, работает в 200+ странах. Идеально для туристов и digital nomads.">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-  <!-- topbar -->
-  <div class="topbar">
-    <div class="container top-inner">
-      <a href="https://t.me/Go_ESIM" id="tg-top">Telegram</a>
-      <span class="chip active" id="btn-ru">RU</span>
-      <span class="chip" id="btn-en">EN</span>
-    </div>
-  </div>
-
-  <!-- HERO -->
-  <header class="hero">
-    <div class="container hero-inner">
-      <div class="logo" aria-hidden="true"></div>
-      <h1 id="hero-title">Go_ESIM 🌍 Интернет без роуминга</h1>
-      <p class="tagline" id="hero-tag">eSIM — виртуальная SIM-карта. Установка за 1 минуту, работает в 200+ странах.</p>
-      <div>
-        <!-- кнопка на твою партнёрку -->
-        <a class="btn" href="https://www.simoptions.com/?utm_medium=wpam_id_866" id="buy-top">Купить eSIM</a>
-        <a class="btn btn-outline" href="https://t.me/Go_ESIM" id="tg-hero">Telegram</a>
-      </div>
-    </div>
+  <!-- Topbar -->
+  <header class="topbar">
+    <div class="logo">Go_ESIM 🌍</div>
+    <nav>
+      <a href="index.html" id="nav-home">Главная</a>
+      <a href="#faq" id="nav-faq">FAQ</a>
+      <a href="?lang=ru" id="lang-ru">RU</a>
+      <a href="?lang=en" id="lang-en">EN</a>
+    </nav>
   </header>
 
-  <main class="container">
-    <section class="card">
-      <h2 id="what-h2">Что такое eSIM?</h2>
-      <p id="what-p">
-        eSIM — это виртуальная SIM-карта. Никакого пластика: вы получаете QR-код на email, сканируете в настройках телефона и
-        выходите онлайн за минуту. Идеально для поездок без переплаты за роуминг.
-      </p>
-      <a class="btn" href="https://www.simoptions.com/?utm_medium=wpam_id_866" id="buy-1">Купить eSIM</a>
-    </section>
+  <!-- Hero -->
+  <section class="hero">
+    <h1>Интернет без роуминга</h1>
+    <p>eSIM — виртуальная SIM-карта. Установка за 1 минуту, работает в 200+ странах.</p>
+    <div class="btns">
+      <a class="btn" href="https://www.simoptions.com/?utm_medium=wpam_id_866" id="buy-main">Купить eSIM</a>
+    </div>
+  </section>
 
-    <section class="card">
-      <h2 id="why-h2">Почему Go_ESIM</h2>
-      <ul id="why-ul">
-        <li>⚡ Подключение за 1 минуту</li>
-        <li>🌍 Работает в 200+ странах</li>
-        <li>📱 Совместимо с iPhone, Samsung, Pixel, Huawei</li>
-        <li>💼 Удобно для туристов и digital nomads</li>
-      </ul>
-      <a class="btn" href="https://www.simoptions.com/?utm_medium=wpam_id_866" id="buy-2">Купить eSIM</a>
-    </section>
+  <!-- What is eSIM -->
+  <section class="card">
+    <h2 id="what-h2">Что такое eSIM?</h2>
+    <p>
+      eSIM — это виртуальная SIM-карта. Никакого пластика: вы получаете QR-код на email, 
+      сканируете в настройках телефона и выходите онлайн за минуту. 
+      Идеально для поездок без переплат за роуминг.
+    </p>
+    <a class="btn" href="https://www.simoptions.com/?utm_medium=wpam_id_866" id="buy-1">Купить eSIM</a>
+  </section>
 
-    <section class="card">
-      <h2>FAQ</h2>
-      <details>
-        <summary id="q1">Как я получу eSIM?</summary>
-        <p id="a1">QR-код придёт на email сразу после оплаты. Установить можно заранее.</p>
-      </details>
-      <details>
-        <summary id="q2">Сохранится ли мой WhatsApp номер?</summary>
-        <p id="a2">Да. eSIM добавляет интернет-пакет, ваш WhatsApp номер остаётся прежним.</p>
-      </details>
-      <details>
-        <summary id="q3">Когда лучше активировать?</summary>
-        <p id="a3">Обычно в день поездки/по прилёту — тогда начнётся расход пакета.</p>
-      </details>
-    </section>
-  </main>
+  <!-- Why Go_ESIM -->
+  <section class="card">
+    <h2 id="why-h2">Почему Go_ESIM</h2>
+    <ul id="why-ul">
+      <li>⚡ Подключение за 1 минуту</li>
+      <li>🌍 Работает в 200+ странах</li>
+      <li>📱 Совместимо с iPhone, Samsung, Pixel, Huawei</li>
+      <li>💼 Удобно для туристов и digital nomads</li>
+    </ul>
+    <div class="btns">
+      <a class="btn" href="https://t.me/Go_ESIM" id="btn-connect">Подключить eSIM</a>
+    </div>
+  </section>
 
+  <!-- FAQ -->
+  <section class="card" id="faq">
+    <h2>FAQ</h2>
+    <p><b>Как я получу eSIM?</b> — QR-код придёт на email сразу после оплаты.</p>
+    <p><b>Можно ли оставить WhatsApp?</b> — Да, номер WhatsApp не изменится.</p>
+    <p><b>Когда активировать?</b> — В любое время, обычно прямо по прилёту.</p>
+  </section>
+
+  <!-- Footer -->
   <footer>
-    <div class="container">© 2025 Go_ESIM. All rights reserved.</div>
+    <p>© 2025 Go_ESIM. All rights reserved.</p>
   </footer>
-
-  <!-- мини i18n -->
-  <script>
-    const RU = {
-      "hero-title":"Go_ESIM 🌍 Интернет без роуминга",
-      "hero-tag":"eSIM — виртуальная SIM-карта. Установка за 1 минуту, работает в 200+ странах.",
-      "buy-top":"Купить eSIM","tg-hero":"Telegram",
-      "what-h2":"Что такое eSIM?","what-p":"eSIM — это виртуальная SIM-карта. Никакого пластика: вы получаете QR-код на email, сканируете в настройках телефона и выходите онлайн за минуту. Идеально для поездок без переплаты за роуминг.",
-      "why-h2":"Почему Go_ESIM",
-      "why-ul":"<li>⚡ Подключение за 1 минуту</li><li>🌍 Работает в 200+ странах</li><li>📱 Совместимо с iPhone, Samsung, Pixel, Huawei</li><li>💼 Удобно для туристов и digital nomads</li>",
-      "q1":"Как я получу eSIM?","a1":"QR-код придёт на email сразу после оплаты. Установить можно заранее.",
-      "q2":"Сохранится ли мой WhatsApp номер?","a2":"Да. eSIM добавляет интернет-пакет, ваш WhatsApp номер остаётся прежним.",
-      "q3":"Когда лучше активировать?","a3":"Обычно в день поездки/по прилёту — тогда начнётся расход пакета.",
-      "buy-1":"Купить eSIM","buy-2":"Купить eSIM"
-    };
-    const EN = {
-      "hero-title":"Go_ESIM 🌍 Roaming-free Internet",
-      "hero-tag":"eSIM is a virtual SIM. Install in 1 minute, works in 200+ countries.",
-      "buy-top":"Buy eSIM","tg-hero":"Telegram",
-      "what-h2":"What is eSIM?","what-p":"eSIM is a virtual SIM card. No plastic: you get a QR by email, scan it in phone settings and go online in a minute. Perfect for travel without roaming fees.",
-      "why-h2":"Why Go_ESIM",
-      "why-ul":"<li>⚡ Instant 1-minute activation</li><li>🌍 Works in 200+ countries</li><li>📱 Compatible with iPhone, Samsung, Pixel, Huawei</li><li>💼 Great for travelers & digital nomads</li>",
-      "q1":"How will I receive my eSIM?","a1":"You’ll get a QR code by email right after payment. You can install in advance.",
-      "q2":"Will my WhatsApp number stay?","a2":"Yes. eSIM adds data only — your WhatsApp number remains the same.",
-      "q3":"When should I activate?","a3":"Usually on the travel day / upon arrival so the plan starts then.",
-      "buy-1":"Buy eSIM","buy-2":"Buy eSIM"
-    };
-
-    const els = {
-      "hero-title":document.getElementById("hero-title"),
-      "hero-tag":document.getElementById("hero-tag"),
-      "buy-top":document.getElementById("buy-top"),
-      "tg-hero":document.getElementById("tg-hero"),
-      "what-h2":document.getElementById("what-h2"),
-      "what-p":document.getElementById("what-p"),
-      "why-h2":document.getElementById("why-h2"),
-      "why-ul":document.getElementById("why-ul"),
-      "q1":document.getElementById("q1"), "a1":document.getElementById("a1"),
-      "q2":document.getElementById("q2"), "a2":document.getElementById("a2"),
-      "q3":document.getElementById("q3"), "a3":document.getElementById("a3"),
-      "buy-1":document.getElementById("buy-1"), "buy-2":document.getElementById("buy-2")
-    };
-    const btnRU = document.getElementById("btn-ru");
-    const btnEN = document.getElementById("btn-en");
-
-    function setLang(dict){
-      for(const k in dict){
-        if(!els[k]) continue;
-        if(k==="why-ul") els[k].innerHTML = dict[k];
-        else els[k].textContent = dict[k];
-      }
-      document.documentElement.lang = (dict===EN) ? "en" : "ru";
-      btnRU.classList.toggle("active", dict!==EN);
-      btnEN.classList.toggle("active", dict===EN);
-    }
-
-    btnRU.addEventListener("click", ()=>setLang(RU));
-    btnEN.addEventListener("click", ()=>setLang(EN));
-
-    // авто-язык
-    if(navigator.language && navigator.language.toLowerCase().startsWith("en")) setLang(EN);
-    else setLang(RU);
-  </script>
 </body>
 </html>
