--- a/index.html
+++ b/index.html
@@ -1,69 +1,193 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Go_ESIM 🌍 Интернет без роуминга</title>
-  <meta name="description" content="Купи eSIM онлайн — установка за 1 минуту, работает в 200+ странах. Идеально для туристов и digital nomads.">
-  <link rel="stylesheet" href="style.css">
+  <meta name="description" content="Купить eSIM онлайн. Установка за 1 минуту, работает в 200+ странах. Совместимо с iPhone, Samsung, Pixel, Huawei." />
+  <meta property="og:title" content="Go_ESIM — интернет без роуминга" />
+  <meta property="og:description" content="Установи eSIM за 1 минуту и пользуйся интернетом в 200+ странах." />
+  <meta property="og:type" content="website" />
+  <link rel="icon" href="favicon.ico" />
+  <style>
+    :root{
+      --bg:#0f1216;--ink:#e7eef7;--muted:#a5b5c8;
+      --card:#151a21;--line:#202833;
+      --brand:#00c853;--brand-h:#00a344;
+      --maxw:980px;--r:14px;--sh:0 8px 26px rgba(0,0,0,.22)
+    }
+    *{box-sizing:border-box}html,body{margin:0}
+    body{font:16px/1.6 system-ui,-apple-system,Segoe UI,Roboto;color:var(--ink);background:var(--bg)}
+    a{color:inherit;text-decoration:none}
+    .container{max-width:var(--maxw);margin:0 auto;padding:0 16px}
+    /* topbar */
+    .topbar{position:sticky;top:0;z-index:20;background:rgba(15,18,22,.75);backdrop-filter:blur(6px);border-bottom:1px solid var(--line)}
+    .top{display:flex;justify-content:space-between;align-items:center;padding:10px 0}
+    .brand{display:flex;align-items:center;gap:10px;font-weight:800}
+    .logo{width:34px;height:34px;border-radius:8px;background:#0c1015 url('favicon.ico') center/20px no-repeat;border:1px solid var(--line)}
+    .nav{display:flex;gap:12px;align-items:center}
+    .chip{padding:6px 10px;border:1px solid var(--line);border-radius:10px;color:var(--muted)}
+    .chip.active{background:#1a222d;color:var(--ink)}
+    /* hero */
+    .hero{border-bottom:1px solid var(--line);background:
+      radial-gradient(1200px 600px at 80% -20%, rgba(0,200,83,.12), transparent 60%),
+      radial-gradient(1000px 500px at -10% -20%, rgba(97,218,251,.10), transparent 60%),
+      linear-gradient(180deg,#121721 0%,#0f1216 60%)}
+    .hero-inner{padding:56px 0 42px;text-align:center}
+    h1{margin:10px 0 10px;font-size:40px}
+    .tag{margin:0 0 20px;color:var(--muted);font-size:18px}
+    .btn{display:inline-block;padding:14px 26px;font-weight:700;border-radius:12px;border:0;color:#04140a;background:var(--brand);box-shadow:var(--sh);transition:.15s}
+    .btn:hover{background:var(--brand-h)}
+    .btns{display:flex;gap:10px;flex-wrap:wrap;justify-content:center}
+    /* sections */
+    main{padding:34px 0 64px}
+    .card{background:var(--card);border:1px solid var(--line);border-radius:var(--r);padding:22px;margin:18px 0;box-shadow:var(--sh)}
+    h2{margin:0 0 12px;font-size:22px}
+    ul{margin:0;padding-left:20px}
+    /* footer */
+    footer{border-top:1px solid var(--line);color:var(--muted);padding:22px 0;text-align:center}
+    /* mobile */
+    @media (max-width:760px){
+      h1{font-size:32px}
+    }
+  </style>
 </head>
 <body>
-  <!-- Topbar -->
-  <header class="topbar">
-    <div class="logo">Go_ESIM 🌍</div>
-    <nav>
-      <a href="index.html" id="nav-home">Главная</a>
-      <a href="#faq" id="nav-faq">FAQ</a>
-      <a href="?lang=ru" id="lang-ru">RU</a>
-      <a href="?lang=en" id="lang-en">EN</a>
-    </nav>
+  <!-- TOPBAR -->
+  <div class="topbar">
+    <div class="container top">
+      <div class="brand">
+        <div class="logo" aria-hidden="true"></div>
+        <span>Go_ESIM</span>
+      </div>
+      <div class="nav">
+        <a href="#faq" class="chip" id="nav-faq">FAQ</a>
+        <button class="chip active" id="lang-ru" type="button">RU</button>
+        <button class="chip" id="lang-en" type="button">EN</button>
+      </div>
+    </div>
+  </div>
+
+  <!-- HERO -->
+  <header class="hero">
+    <div class="container hero-inner">
+      <h1 id="hero-title">Интернет без роуминга</h1>
+      <p class="tag" id="hero-tag">eSIM — виртуальная SIM-карта. Установка за 1 минуту, работает в 200+ странах.</p>
+      <div class="btns">
+        <a class="btn" id="buy-hero" href="https://www.simoptions.com/?utm_medium=wpam_id_866">Купить eSIM</a>
+      </div>
+    </div>
   </header>
 
-  <!-- Hero -->
-  <section class="hero">
-    <h1>Интернет без роуминга</h1>
-    <p>eSIM — виртуальная SIM-карта. Установка за 1 минуту, работает в 200+ странах.</p>
-    <div class="btns">
-      <a class="btn" href="https://www.simoptions.com/?utm_medium=wpam_id_866" id="buy-main">Купить eSIM</a>
-    </div>
-  </section>
+  <main class="container">
+    <!-- WHAT IS ESIM -->
+    <section class="card">
+      <h2 id="what-h2">Что такое eSIM?</h2>
+      <p id="what-txt">
+        eSIM — это виртуальная SIM-карта. Никакого пластика: вы получаете QR-код на email,
+        сканируете в настройках телефона и выходите онлайн за минуту. Идеально для поездок
+        без переплат за роуминг.
+      </p>
+      <a class="btn" id="buy-1" href="https://www.simoptions.com/?utm_medium=wpam_id_866">Купить eSIM</a>
+    </section>
 
-  <!-- What is eSIM -->
-  <section class="card">
-    <h2 id="what-h2">Что такое eSIM?</h2>
-    <p>
-      eSIM — это виртуальная SIM-карта. Никакого пластика: вы получаете QR-код на email, 
-      сканируете в настройках телефона и выходите онлайн за минуту. 
-      Идеально для поездок без переплат за роуминг.
-    </p>
-    <a class="btn" href="https://www.simoptions.com/?utm_medium=wpam_id_866" id="buy-1">Купить eSIM</a>
-  </section>
+    <!-- WHY GO_ESIM -->
+    <section class="card">
+      <h2 id="why-h2">Почему Go_ESIM</h2>
+      <ul id="why-ul">
+        <li>⚡ Подключение за 1 минуту</li>
+        <li>🌍 Работает в 200+ странах</li>
+        <li>📱 Совместимо с iPhone, Samsung, Pixel, Huawei</li>
+        <li>💼 Удобно для туристов и digital nomads</li>
+      </ul>
+      <div class="btns">
+        <!-- ЗАМЕНА: тут теперь кнопка в Telegram -->
+        <a class="btn" id="btn-connect" href="https://t.me/Go_ESIM">Подключить eSIM</a>
+      </div>
+    </section>
 
-  <!-- Why Go_ESIM -->
-  <section class="card">
-    <h2 id="why-h2">Почему Go_ESIM</h2>
-    <ul id="why-ul">
-      <li>⚡ Подключение за 1 минуту</li>
-      <li>🌍 Работает в 200+ странах</li>
-      <li>📱 Совместимо с iPhone, Samsung, Pixel, Huawei</li>
-      <li>💼 Удобно для туристов и digital nomads</li>
-    </ul>
-    <div class="btns">
-      <a class="btn" href="https://t.me/Go_ESIM" id="btn-connect">Подключить eSIM</a>
-    </div>
-  </section>
+    <!-- FAQ -->
+    <section class="card" id="faq">
+      <h2>FAQ</h2>
+      <p id="faq-1"><b>Как я получу eSIM?</b> — QR-код придёт на email сразу после оплаты.</p>
+      <p id="faq-2"><b>Можно ли оставить WhatsApp?</b> — Да, номер WhatsApp не изменится.</p>
+      <p id="faq-3"><b>Когда активировать?</b> — В день поездки / по прилёту, чтобы пакет расходовался в поездке.</p>
+    </section>
+  </main>
 
-  <!-- FAQ -->
-  <section class="card" id="faq">
-    <h2>FAQ</h2>
-    <p><b>Как я получу eSIM?</b> — QR-код придёт на email сразу после оплаты.</p>
-    <p><b>Можно ли оставить WhatsApp?</b> — Да, номер WhatsApp не изменится.</p>
-    <p><b>Когда активировать?</b> — В любое время, обычно прямо по прилёту.</p>
-  </section>
-
-  <!-- Footer -->
   <footer>
-    <p>© 2025 Go_ESIM. All rights reserved.</p>
+    <div class="container">© 2025 Go_ESIM. All rights reserved.</div>
   </footer>
+
+  <!-- LANG SWITCH -->
+  <script>
+    const t = {
+      ru:{
+        heroTitle:'Интернет без роуминга',
+        heroTag:'eSIM — виртуальная SIM-карта. Установка за 1 минуту, работает в 200+ странах.',
+        buy:'Купить eSIM',
+        whatH2:'Что такое eSIM?',
+        whatTxt:'eSIM — это виртуальная SIM-карта. Никакого пластика: вы получаете QR-код на email, сканируете в настройках телефона и выходите онлайн за минуту. Идеально для поездок без переплат за роуминг.',
+        whyH2:'Почему Go_ESIM',
+        whyList:['⚡ Подключение за 1 минуту','🌍 Работает в 200+ странах','📱 Совместимо с iPhone, Samsung, Pixel, Huawei','💼 Удобно для туристов и digital nomads'],
+        connect:'Подключить eSIM',
+        faq1:'<b>Как я получу eSIM?</b> — QR-код придёт на email сразу после оплаты.',
+        faq2:'<b>Можно ли оставить WhatsApp?</b> — Да, номер WhatsApp не изменится.',
+        faq3:'<b>Когда активировать?</b> — В день поездки / по прилёту, чтобы пакет расходовался в поездке.',
+        navFaq:'FAQ'
+      },
+      en:{
+        heroTitle:'Roaming-free internet',
+        heroTag:'eSIM is a virtual SIM. Install in 1 minute and work in 200+ countries.',
+        buy:'Buy eSIM',
+        whatH2:'What is eSIM?',
+        whatTxt:'eSIM is a virtual SIM card. No plastic: you receive a QR code by email, scan it in your phone settings and get online in a minute. Perfect for travel without roaming fees.',
+        whyH2:'Why Go_ESIM',
+        whyList:['⚡ 1-minute setup','🌍 Works in 200+ countries','📱 Compatible with iPhone, Samsung, Pixel, Huawei','💼 Great for tourists & digital nomads'],
+        connect:'Get help to install',
+        faq1:'<b>How do I receive my eSIM?</b> — A QR code is emailed right after payment.',
+        faq2:'<b>Can I keep my WhatsApp number?</b> — Yes, your WhatsApp number stays the same.',
+        faq3:'<b>When should I activate?</b> — On the travel day / upon arrival so the plan starts in trip.',
+        navFaq:'FAQ'
+      }
+    };
+
+    const el = id => document.getElementById(id);
+    const langRU = el('lang-ru'), langEN = el('lang-en');
+
+    function apply(lang){
+      const L = t[lang];
+      el('hero-title').textContent = L.heroTitle;
+      el('hero-tag').textContent = L.heroTag;
+      el('buy-hero').textContent = L.buy;
+      el('what-h2').textContent = L.whatH2;
+      el('what-txt').textContent = L.whatTxt;
+      el('buy-1').textContent = L.buy;
+      el('why-h2').textContent = L.whyH2;
+      el('btn-connect').textContent = L.connect;
+      el('faq-1').innerHTML = L.faq1;
+      el('faq-2').innerHTML = L.faq2;
+      el('faq-3').innerHTML = L.faq3;
+      document.getElementById('nav-faq').textContent = L.navFaq;
+
+      const ul = document.getElementById('why-ul');
+      ul.innerHTML = '';
+      L.whyList.forEach(item=>{
+        const li = document.createElement('li'); li.textContent = item; ul.appendChild(li);
+      });
+
+      document.documentElement.lang = lang === 'ru' ? 'ru' : 'en';
+      langRU.classList.toggle('active', lang==='ru');
+      langEN.classList.toggle('active', lang==='en');
+    }
+
+    langRU.addEventListener('click', ()=>apply('ru'));
+    langEN.addEventListener('click', ()=>apply('en'));
+
+    // Автоязык по хэшу ?lang=en|ru или по браузеру
+    const q = new URLSearchParams(location.search).get('lang');
+    if(q==='en'||q==='ru'){ apply(q); }
+    else { apply((navigator.language||'ru').startsWith('en')?'en':'ru'); }
+  </script>
 </body>
 </html>
