--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <!-- Верификация Google -->
+  <meta name="google-site-verification" content="qST30sqicBthgBmJLazUAZDOf7ll_ygBnVYESpnrvqE" />
+
   <title>Go_ESIM 🌍 Интернет без роуминга</title>
   <meta name="description" content="Купить eSIM онлайн. Установка за 1 минуту, работает в 200+ странах. Совместимо с iPhone, Samsung, Pixel, Huawei." />
-  
-  <!-- Google Search Console verification -->
-  <meta name="google-site-verification" content="qST30sqicBthgBmJLazUAZDOf7ll_ygBnVYESpnrvqE" />
-  
   <link rel="icon" href="favicon.ico" />
   <style>
     :root{
